.k8s/dev/ingress.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-agent-ingress
  namespace: internal-agent-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - internal-agent.dev.api.fashionaiale.com
      secretName: internal-agent-tls
  rules:
    - host: internal-agent.dev.api.fashionaiale.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: internal-agent
                port:
                  number: 80
